RESOLVED FIXED87511
[Win] fast/events/keydown-leftright-keys.html failing since introduction in r118001
https://bugs.webkit.org/show_bug.cgi?id=87511
Summary [Win] fast/events/keydown-leftright-keys.html failing since introduction in r...
Jessie Berlin
Reported 2012-05-25 10:18:32 PDT
The Windows implementation of eventSender.keyDown needs to be updated for the changes made to that function for other ports in http://trac.webkit.org/changeset/118001 --- /home/buildbot/slave/win-release-tests/build/layout-test-results/fast/events/keydown-leftright-keys-expected.txt 2012-05-25 08:59:06.963869600 -0700 +++ /home/buildbot/slave/win-release-tests/build/layout-test-results/fast/events/keydown-leftright-keys-actual.txt 2012-05-25 08:59:06.961869500 -0700 @@ -5,23 +5,23 @@ PASS lastKeyboardEvent.type is "keydown" -PASS lastKeyboardEvent.keyCode is 16 -PASS lastKeyboardEvent.keyLocation is KEY_LOCATION_LEFT +FAIL lastKeyboardEvent.keyCode should be 16. Was 76. +FAIL lastKeyboardEvent.keyLocation should be 1. Was 0. PASS lastKeyboardEvent.type is "keydown" -PASS lastKeyboardEvent.keyCode is 17 -PASS lastKeyboardEvent.keyLocation is KEY_LOCATION_LEFT +FAIL lastKeyboardEvent.keyCode should be 17. Was 76. +FAIL lastKeyboardEvent.keyLocation should be 1. Was 0. PASS lastKeyboardEvent.type is "keydown" -PASS lastKeyboardEvent.keyCode is 18 -PASS lastKeyboardEvent.keyLocation is KEY_LOCATION_LEFT +FAIL lastKeyboardEvent.keyCode should be 18. Was 76. +FAIL lastKeyboardEvent.keyLocation should be 1. Was 0. PASS lastKeyboardEvent.type is "keydown" -PASS lastKeyboardEvent.keyCode is 16 -PASS lastKeyboardEvent.keyLocation is KEY_LOCATION_RIGHT +FAIL lastKeyboardEvent.keyCode should be 16. Was 82. +FAIL lastKeyboardEvent.keyLocation should be 2. Was 0. PASS lastKeyboardEvent.type is "keydown" -PASS lastKeyboardEvent.keyCode is 17 -PASS lastKeyboardEvent.keyLocation is KEY_LOCATION_RIGHT +FAIL lastKeyboardEvent.keyCode should be 17. Was 82. +FAIL lastKeyboardEvent.keyLocation should be 2. Was 0. PASS lastKeyboardEvent.type is "keydown" -PASS lastKeyboardEvent.keyCode is 18 -PASS lastKeyboardEvent.keyLocation is KEY_LOCATION_RIGHT +FAIL lastKeyboardEvent.keyCode should be 18. Was 82. +FAIL lastKeyboardEvent.keyLocation should be 2. Was 0. PASS successfullyParsed is true TEST COMPLETE
Attachments
Patch (1.82 KB, patch)
2012-05-25 10:21 PDT, Jessie Berlin
no flags
Jessie Berlin
Comment 1 2012-05-25 10:21:39 PDT
Jessie Berlin
Comment 2 2012-05-25 10:48:38 PDT
Note You need to log in before you can comment on or make changes to this bug.