[Win] fast/events/keydown-leftright-keys.html failing since introduction in r118001 https://bugs.webkit.org/show_bug.cgi?id=87511

Reviewed by Alexey Proskuryakov.

Update the Windows implementation of keyDown to match the Mac one changed in r118001.

* DumpRenderTree/win/EventSender.cpp:
(keyDownCallback):

Canonical link: https://commits.webkit.org/105292@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118540 268f45cc-cd09-0410-ab3c-d52691b4dbfc